# yt-dlp-ffmpeg-gui

./: .gitignore  pyproject.toml  requirements.txt  video_downloader.py
.github/workflows/: build_and_release.yaml  ci.yaml
src/: video_downloader.py
